# Simcoflow3D

./: .gitignore  CLSVOF.f90  CMakeLists.txt  Clsvof.f90  CutCell.f90  MPI.f90  Main.f90  Matrix.f90  Mesh.f90  Precision.f95  PredictUVW.f90  PrintResult.f90  ProjectionP.f90  Solver.f90  StateVariables.f90  clsvof_OldState.f90
Debug/: CMakeLists.txt  Debug_en_GB.ts
src/: BoundaryFunction.f90  BoundaryInterface.f90  CMakeLists.txt  Clsvof.f90  Clsvof.f90.orig  Clsvof_BACKUP_51696.f90  Clsvof_LOCAL_51696.f90  ComputePUVW.f90  Constants.f90  CutCell.f90  Geometry.f90  Main.f90  Main.f90.orig  Matrix.f90  Mesh.f90  Precision.f90  PredictUVW.f90  PrintResult.f90  ProjectionP.f90  ProjectionP.f90.orig  STL.f90  SolidBody.f90  Solver.f90  Solver.f90.orig  StateVariables.f90  VTK_mod.f90  WaveGeneration.f90
src/Test/: CMakeLists.txt
src/Test/AdvectionTest/: AdvectionTest.f90  AdvectionTest.f90.orig  InitialVof.f90  input.txt
src/Test/Dambreak/: Dambreak.f90  Dambreak.f90.orig  InitialVof.f90
src/Test/FlowSphere/: FlowSphere.f90  FlowSphere.f90.orig
src/Test/FlowSphere2Phases/: FlowSphere2Phases.f90  InitialVof.f90  sphere.stl
src/Test/ParallelFlowTest/: InitialVof.f90  ParallelFlowTest.f90  readme.txt
src/Test/PlanarTest/: InitialVof.f90  PlanarTest.f90  input.txt
src/Test/Vessel/: InitializationVessel.f90  Ship.stl  Vessel.f90  note
src/Test/WavesSimulation/: InitialVof.f90  WavesMain.f90
